[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/bloodsplat.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Gore/Bloodsplat.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.72549, 0.72549, 0.72549, 1 ), Color( 0.72549, 0.72549, 0.72549, 0 ) ]
}

[node name="Bloodsplat" type="Sprite"]
modulate = Color( 0.72549, 0.72549, 0.72549, 1 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="RemovalTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeout = SubResource( 1 )
[connection signal="timeout" from="RemovalTimer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
